# pybake

./: README.md  main.py  pyproject.toml
src/pybake/: __init__.py  __main__.py  cli.py  config.py  project_generator.py  templates.py
tests/: __init__.py  test_cli.py
