[project]
name = "pybake"
version = "0.1.0"
description = "CLI tool to create new Python projects with modern tooling setup"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Nikith Shetty", email = "your.email@example.com"}
]
keywords = ["cli", "python", "project-generator", "uv", "pyright", "ruff", "beartype"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.9",
    "pyright>=1.1.0",
    "beartype>=0.16.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
pybake = "pybake.cli:app"

[project.urls]
Homepage = "https://github.com/NikithShetty/pybake"
Repository = "https://github.com/NikithShetty/pybake"
Documentation = "https://github.com/NikithShetty/pybake#readme"
Issues = "https://github.com/NikithShetty/pybake/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    ".git",
]
reportMissingImports = "warning"
reportMissingTypeStubs = false
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "beartype>=0.21.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]

[tool.uv]
dev-dependencies = ["beartype>=0.21.0", "pre-commit>=4.3.0", "pyright>=1.1.403", "pytest>=8.4.1", "pytest-cov>=6.2.1", "ruff>=0.12.9"]
